--- a/yaml/nginx-deployment.yaml
+++ b/yaml/nginx-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: app-nginx
-  namespace: test
+  namespace: argocd
 spec:
   selector:
     matchLabels:
